# email-mcp-server

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  EMAIL_MCP_PROMPT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
ms365_email_mcp_server/: __init__.py  server.py
