[project]
name = "ms365-email-mcp-server"
version = "0.1.0"
description = "MS365 Email MCP Server - A Model Context Protocol server for Microsoft 365 Outlook email operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MS365 Email MCP Server Contributors"}
]
keywords = ["mcp", "microsoft-365", "outlook", "email", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.9.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ms365-email-mcp-server = "ms365_email_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/your-org/ms365-email-mcp-server"
Documentation = "https://github.com/your-org/ms365-email-mcp-server#readme"
Repository = "https://github.com/your-org/ms365-email-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

